# cubes-are-cool

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
src/: bounding_box.cpp  bounding_box.hpp  camera.hpp  camera_system.hpp  game_manager.cpp  game_manager.hpp  isystem.hpp  main.cpp  player.cpp  player.hpp  shader.hpp  system_manager.hpp
src/resources/shaders/: light.frag  light.vert  source.vert
